--- a/about.css
+++ b/about.css
@@ -31,7 +31,7 @@ a {
 
 .nav ul {
     list-style: none;
-    margin-left: 30vw;
+    margin-left: 50vw;
 }
 
 .nav ul li {
@@ -124,6 +124,7 @@ a {
     padding: 3% 0;
     gap: 10px;
     text-align: center;
+    margin:2%;
 }
 
 .col-lg-3 h5 {
@@ -187,4 +188,46 @@ a {
     background-size: cover;
     width: 42vw;
     height: 50vh;
+}
+
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: none;
+    border-radius: 20px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
