--- a/how.css
+++ b/how.css
@@ -10,6 +10,12 @@
 a {
     text-decoration: none;
 }
+.tv{
+    color:gold;
+}
+.tv:hover{
+    color:blue;
+}
 
 .logo p {
     font-size: 32px;
@@ -28,6 +34,7 @@ a {
     text-decoration: none;
     color: #f1f1f1;
 }
+
 
 .col-md-4 {
     height: 50vh;
@@ -52,4 +59,48 @@ footer ul {
     list-style: none;
     color: #f1f1f1;
     padding: 3% 0;
+}
+
+/*SIGNUP DOCTOR*/
+
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: none;
+    border-radius: 20px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
