--- a/style.css
+++ b/style.css
@@ -1,197 +1,206 @@
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    justify-content: space-between;
-    background-color: #0D4A4A;
-    padding-right: 5%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	justify-content: space-between;
+	background-color: #0d4a4a;
+	padding-right: 5%;
 }
 
 .logo p {
-    font-size: 32px;
+	font-size: 32px;
 }
-.tv{
-    color:gold;
+.tv {
+	color: gold;
 }
-.tv:hover{
-    color:blue;
+.tv:hover {
+	color: blue;
 }
 
 .nav ul {
-    list-style: none
+	list-style: none;
 }
 
 .nav ul li {
-    display: inline;
-    margin: 0 2vw;
+	display: inline;
+	margin: 0 2vw;
 }
 
 .nav ul li a {
-    text-decoration: none;
-    color: #f1f1f1;
+	text-decoration: none;
+	color: #f1f1f1;
 }
 
 .search {
-    margin-top: 5%;
+	margin-top: 5%;
 }
 
 #about-s {
-    width: 30vw;
-    height: 25px;
-    border: none;
-    outline: none !important;
-    border-bottom: 2px solid gold;
-    background-color: #ffffff2f;
-    caret-color: gold;
-    padding: 0 3vw;
+	width: 30vw;
+	height: 25px;
+	border: none;
+	outline: none !important;
+	border-bottom: 2px solid gold;
+	background-color: #ffffff2f;
+	caret-color: gold;
+	padding: 0 3vw;
 }
 
 #about-s::placeholder {
-    color: #f1f1f1;
+	color: #f1f1f1;
 }
 
 #iconSearch {
-    margin-left: 5vw;
+	margin-left: 5vw;
 }
 
 #about {
-    padding: 2% 4%;
-    background-color: #093535;
+	padding: 2% 4%;
+	background-color: #093535;
 }
 
 #hero {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(images/doctor5.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    padding-top: 5%;
-    padding-bottom: 5%;
+	background-image: linear-gradient(
+			to bottom,
+			rgba(0, 0, 0, 0.6),
+			rgba(0, 0, 0, 0.6)
+		),
+		url(images/doctor5.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	padding-top: 5%;
+	padding-bottom: 5%;
 }
 
 .hero-txt {
-    margin-left: 10%;
+	margin-left: 10%;
 }
 
 .form-container {
-    margin-top: 15vh;
-    margin-left: 10%;
+	margin-top: 15vh;
+	margin-left: 10%;
 }
 
 select {
-    outline: none !important;
-    border: none;
-    width: 25vw;
-    height: 3rem;
-    color: rgb(89, 88, 88);
-    padding: 0 3%;
-    margin: 0 2vw;
+	outline: none !important;
+	border: none;
+	width: 25vw;
+	height: 3rem;
+	color: rgb(89, 88, 88);
+	padding: 0 3%;
+	margin: 0 2vw;
 }
 
 #btns {
-    height: 3rem;
-    width: 3rem;
-    border: none;
+	height: 3rem;
+	width: 3rem;
+	border: none;
 }
 
 svg {
-    fill: red;
-    transform: scale(0.7);
+	fill: red;
+	transform: scale(0.7);
 }
 
 .col-md-4 {
-    height: 30vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 15vw;
-    background-color: #f1f1f1;
-    margin: 0 1vw;
-    flex-direction: column;
+	height: 30vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 15vw;
+	background-color: #f1f1f1;
+	margin: 0 1vw;
+	flex-direction: column;
 }
 
 .col-md-4:hover {
-    background-color: #0d4a4a60;
+	background-color: #0d4a4a60;
 }
 
 .chatbox {
-    /* text-align: center; */
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    /* margin-top: 40vh;
+	/* text-align: center; */
+	display: flex;
+	justify-content: center;
+	position: absolute;
+	/* margin-top: 40vh;
    margin-left: 80vw; */
-    position: fixed;
-    z-index: 99;
-    /* opacity: 0; */
+	position: fixed;
+	z-index: 99;
+	/* opacity: 0; */
 }
 
 footer {
-    background-color: #093535;
+	background-color: #093535;
 }
 
 footer ul {
-    list-style: none;
-    color: #f1f1f1;
-    padding: 3% 0;
+	list-style: none;
+	color: #f1f1f1;
+	padding: 3% 0;
 }
 
 .floating {
-    position: absolute;
-    margin-left: 85vw;
-    display: none;
-    margin-top: 70vh;
+	position: absolute;
+	margin-left: 85vw;
+	display: none;
+	margin-top: 70vh;
 }
-#icons{
-    font-size: 200%;
-    color:white;
+i {
+	font-size: 200%;
+	color: rgb(96, 208, 245);
 }
-
-
+#footerLinks li a{
+	color: white;
+}
+#footerLinks li a:hover, i:hover{
+	color:yellow;
+}
 
 /*SIGNUP DOCTOR*/
 
 .dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 10px 15px;
-    font-size: 16px;
-    border: none;
-    border-radius: 20px;
+	background-color: #04aa6d;
+	color: white;
+	padding: 10px 15px;
+	font-size: 16px;
+	border: none;
+	border-radius: 20px;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+	position: relative;
+	display: inline-block;
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #ddd;
+	background-color: #ddd;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+	display: block;
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+	background-color: #3e8e41;
 }
